<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>walk_plotjuggler</name>
  <version>0.0.0</version>
  <description>Package containing plot juggler configuration for debugging the walk</description>
  <maintainer email="kenjibrameld@gmail.com">ijnek</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>walk</exec_depend>
  <exec_depend>plotjuggler_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
